Subida práctica del Servo y corregidas cosas menores en la P00

--- a/P00.html
+++ b/P00.html
@@ -69,10 +69,15 @@
             <section>
                 <h1>código python</h1>
                 <pre><code class="python">
+#!/usr/bin/env python3
+
 from gpiozero import LED
 
 miled = LED(17) # crear un LED
 miled.on()      # encenderlo
+
+
+input("Pulsa una tecla para terminar ...")
                 </code></pre>
             </section>
         </section>
@@ -86,6 +91,8 @@ miled.on()      # encenderlo
             <section>
                 <h1>código python</h1>
                 <pre><code class="python">
+#!/usr/bin/env python3
+
 from gpiozero import LED, Button
 
 miled = LED(17)      # crear un LED
