Añadidos shebang en código python

--- a/P01-fotoresistor.html
+++ b/P01-fotoresistor.html
@@ -65,6 +65,8 @@
             <section>
                 <h1>Código Python</h1>
                 <pre><code>
+#!/usr/bin/env python3
+
 from gpiozero import LightSensor
 
 ldr = LightSensor(4)
@@ -88,6 +90,8 @@ while True:
             <section>
                 <h1>Código Python para probar el buzzer activo</h1>
                 <pre><code>
+#!/usr/bin/env python3
+
 from gpiozero import Buzzer
 from time import sleep
 
@@ -105,6 +109,8 @@ while True:
             <section>
                 <h1>Código Python para todo el circuito</h1>
                 <pre><code>
+#!/usr/bin/env python3
+
 from gpiozero import LightSensor, Buzzer
 from time import sleep
 
