--- a/P02-sensor-movimiento.html
+++ b/P02-sensor-movimiento.html
@@ -63,6 +63,8 @@
             <section>
                 <h1>Código Python</h1>
                 <pre><code>
+#!/usr/bin/env python3
+
 from gpiozero import MotionSensor
 
 pir = MotionSensor(24)
@@ -83,6 +85,8 @@ while True:
             <section>
                 <h1>Código Python</h1>
                 <pre><code>
+#!/usr/bin/env python3
+
 from gpiozero import MotionSensor, LED
 
 pir = MotionSensor(24)
