--- a/P04-rgb.html
+++ b/P04-rgb.html
@@ -104,7 +104,7 @@ from time import sleep
 rgb = RGBLED(5, 6, 13)
 
 while True:
-    rgb.blink() # Explora los parámetros de esta función
+    rgb.blink() # Explora los parámetros de esta función :)
                 </code></pre>
             </section>
 
