--- a/index.html
+++ b/index.html
@@ -33,79 +33,34 @@
 		<section class="background">
 			<h1>
 				Controlando el mundo f&iacute;sico<br />
-				con Python y RaspberryPi
+				con <span style="color:#3776AB;">Python</span> y <span style="color:red;">RaspberryPi</span>
 			</h1>
+			<br />
 			<h2>- Taller PyDay Galicia, 10 junio 2017 -</h2>
-			<br /><span style="color:blue;">Servo</span></h1>
 		</section>
 
 		<section class="background">
-			<section>
-				<h1>Circuito con Servo</h1>
-				<img class="esquema" src="resources/PServo/00-Servo-RPi_bb.png" />
-			</section>
-			<section>
-				<h1>código python</h1>
-				<pre><code class="python">
-#!/usr/bin/env python3
-
-from gpiozero import Servo
-from time import sleep
-
-miservo = Servo(17)
-
-while True:
-	miservo.min() # ó miservo.value = -1
-	sleep(1)
-	miservo.mid() # ó miservo.value = 0
-	sleep(1)
-	miservo.max() # ó miservo.value = +1
-	sleep(1)
-				</code></pre>
-			</section>
+			<h1>Miguel y Félix</h1>
+			<img class="esquema" src="resources/miguel-felix.jpg" /><br/>
+			<a href="https://twitter.com/mgesteiro">mgesteiro</a> / <a href="https://twitter.com/felixgomezlopez">@felixgomezlopez</a>
 		</section>
-
-		<section>
-			<section>
-				<h1>Cómo se posiciona un Servo</h1>
-				<img class="esquema" src="resources/PServo/01-Servo-PWM-normal.png" />
-				<p>Configuración estándar de un Servo en <i>RPi gpiozero</i></p>
-			</section>
-			<section>
-				<h1>El Servo G90: 500-2400 µs</h1>
-				<img class="esquema" src="resources/PServo/01-Servo-PWM-G90.png" /><br />
-				<a href="https://servodatabase.com/servo/towerpro/sg90" target="_blank">&rArr; Especificaciones G90</a>
-			</section>
-			<section>
-				<h1>código python</h1>
-				<pre><code class="python">
-#!/usr/bin/env python3
-
-from gpiozero import Servo
-from time import sleep
-
-miservo = Servo(17,
-	min_pulse_width =   500/1000000, # =   500 µs =  0.5 ms
-	max_pulse_width =  2400/1000000, # =  2400 µs =  2.4 ms
-	frame_width     = 20000/1000000  # = 20000 µs = 20.0 ms
-)
-
-while True:
-	miservo.value = -1 # ó miservo.min()
-	sleep(1)
-	miservo.value = +1 # ó miservo.max()
-	sleep(1)
-				</code></pre>
-			</section>
-		</section>
-
 
 		<section class="background">
-			<h1>¿Qué hemos aprendido?</h1>
+			<h1>Índice</h1>
 			<ul>
-				<li>Servos</li>
-				<li>Señales de control</li>
-				<li>Python - gpiozero</li>
+				<li><a href="">Introducción</a></li>
+				<li><a href="P00.html">Práctica inicial</a></li>
+				<li>Prácticas individuales
+					<ul>
+						<li><a href="">LED RGB</a></li>
+						<li><a href="">Servo</a></li>
+						<li><a href="">Fotoresistencia (LDR)</a></li>
+						<li><a href="">Detector de movimiento (PIR)</a></li>
+						<li><a href="">Sensor de distancia</a></li>
+					</ul>
+				</li>
+				<li><a href="">Práctica común: Relé + Bot de Telegram</a></li>
+				<li>Cierre</li>
 			</ul>
 		</section>
 
