--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
 		<section class="background">
 			<h1>Índice</h1>
 			<ul>
-				<li><a href="">Introducción</a></li>
-				<li><a href="P00.html">Práctica inicial</a></li>
+				<li><a href="presentacion.html">Introducción</a></li>
+				<li><a href="P00-inicial.html">Práctica inicial</a></li>
 				<li>Prácticas individuales
 					<ul>
-						<li><a href="">LED RGB</a></li>
-						<li><a href="">Servo</a></li>
-						<li><a href="">Fotoresistencia (LDR)</a></li>
-						<li><a href="">Detector de movimiento (PIR)</a></li>
-						<li><a href="">Sensor de distancia</a></li>
+						<li><a href="P01-fotoresistor.html">Fotoresistencia (LDR)</a></li>
+						<li><a href="P02-sensor-movimiento.html">Detector de movimiento (PIR)</a></li>
+						<li><a href="P03-sensor-distancia.html">Sensor de distancia</a></li>
+						<li><a href="P04-rgb.html">LED RGB</a></li>
+						<li><a href="P05-servo.html">Servo</a></li>
 					</ul>
 				</li>
-				<li><a href="">Práctica común: Relé + Bot de Telegram</a></li>
+				<li><a href="P06-telegram.html">Práctica común: Relé + Bot de Telegram</a></li>
 				<li>Cierre</li>
 			</ul>
 		</section>
