--- a/P04-rgb.html
+++ b/P04-rgb.html
@@ -25,7 +25,7 @@
 <body>
 
 <div class="logo-footer">
-    <img src="resources/logo-pygalicia.png">
+    <a href="index.html#02"><img src="resources/logo-pygalicia.png"></a>
 </div>
 <div class="reveal">
 
