--- a/presentacion.html
+++ b/presentacion.html
@@ -25,7 +25,7 @@
 <body>
 
 <div class="logo-footer">
-    <img style="width: 50%" src="resources/logo-pygalicia.png">
+    <a href="index.html#02"><img src="resources/logo-pygalicia.png"></a>
 </div>
 <div class="reveal">
 
