--- a/P02-sensor-movimiento.html
+++ b/P02-sensor-movimiento.html
@@ -31,7 +31,7 @@
 
     <div class="slides">
         <section class="background">
-            <h1>Práctica 02:<br/><span style="color:red;">SENSOR DE MOVIMIENTO PASIVO POR INFRAROJOS (PIR)</span></h1>
+            <h1>Práctica 02:<br/><span style="color:#3776AB;">Sensor de movimiento pasivo por infrarrojos (PIR)</span></h1>
         </section>
 
         <section>
