--- a/P01-fotoresistor.html
+++ b/P01-fotoresistor.html
@@ -31,7 +31,7 @@
 
     <div class="slides">
         <section class="background">
-            <h1>Práctica 01:<br/><span style="color:red;">FOTORESISTOR</span></h1>
+            <h1>Práctica 01:<br/><span style="color:#3776AB;">Fotoresistor</span></h1>
         </section>
 
         <section>
