--- a/P03-sensor-distancia.html
+++ b/P03-sensor-distancia.html
@@ -31,7 +31,7 @@
 
     <div class="slides">
         <section class="background">
-            <h1>Práctica 03:<br/><span style="color:red;">SENSOR DE DISTANCIA (ULTRASONIDOS)</span></h1>
+            <h1>Práctica 03:<br/><span style="color:#3776AB;;">Sensor de distancia</span></h1>
         </section>
 
         <section>
