--- a/P04-rgb.html
+++ b/P04-rgb.html
@@ -31,7 +31,7 @@
 
     <div class="slides">
         <section class="background">
-            <h1>Práctica 04:<br/><span style="color:red;">LED RGB</span></h1>
+            <h1>Práctica 04:<br/><span style="color:#3776AB;">Led RGB</span></h1>
         </section>
 
         <section>
