--- a/P05-servo.html
+++ b/P05-servo.html
@@ -31,13 +31,13 @@
 
 	<div class="slides">
 		<section class="background">
-			<h1>Práctica con<br /><span style="color:blue;">Servo</span></h1>
+			<h1>Práctica 5:<br /><span style="color:#3776AB;">Servo</span></h1>
 		</section>
 
 		<section class="background">
 			<section>
 				<h1>Circuito con Servo</h1>
-				<img class="esquema" src="resources/PServo/00-Servo-RPi_bb.png" />
+				<img class="esquema" src="resources/P05/00-Servo-RPi_bb.png" />
 			</section>
 			<section>
 				<h1>código python</h1>
@@ -63,12 +63,12 @@ while True:
 		<section>
 			<section>
 				<h1>Cómo se posiciona un Servo</h1>
-				<img class="esquema" src="resources/PServo/01-Servo-PWM-normal.png" />
+				<img class="esquema" src="resources/P05/01-Servo-PWM-normal.png" />
 				<p>Configuración estándar de un Servo en <i>RPi gpiozero</i></p>
 			</section>
 			<section>
 				<h1>El Servo G90: 500-2400 µs</h1>
-				<img class="esquema" src="resources/PServo/01-Servo-PWM-G90.png" /><br />
+				<img class="esquema" src="resources/P05/01-Servo-PWM-G90.png" /><br />
 				<a href="https://servodatabase.com/servo/towerpro/sg90" target="_blank">&rArr; Especificaciones G90</a>
 			</section>
 			<section>
