Cambiado color en P06

--- a/P06-telegram.html
+++ b/P06-telegram.html
@@ -31,7 +31,7 @@
 
     <div class="slides">
         <section class="background">
-            <h1>Práctica 05:<br/><span style="color:blue;">RELÉ Y BOT TELEGRAM</span></h1>
+            <h1>Práctica 05:<br/><span style="color:#3776AB;">RELÉ Y BOT TELEGRAM</span></h1>
         </section>
 
         <section>
