Modificado color en título

--- a/P00-inicial.html
+++ b/P00-inicial.html
@@ -31,7 +31,7 @@
 
 	<div class="slides">
 		<section>
-			<h1>Práctica inicial:<br/><span style="color:red;">LED</span></h1>
+			<h1>Práctica inicial:<br/><span style="color:#3776AB;">LED</span></h1>
 		</section>
 
 		<section>
