Modificados enlaces a ponentes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<section class="background">
 			<h1>Miguel y Félix</h1>
 			<img class="esquema" src="resources/miguel-felix.jpg" /><br/>
-			<a href="https://twitter.com/mgesteiro">@mgesteiro</a> / <a href="https://twitter.com/felixgomezlopez">@felixgomezlopez</a>
+			<a href="https://twitter.com/mgesteiro" target="_blank">@mgesteiro</a> / <a href="https://twitter.com/felixgomezlopez" target="_blank">@felixgomezlopez</a>
 		</section>
 
 		<section class="background">
