--- a/cierre.html
+++ b/cierre.html
@@ -25,45 +25,31 @@
 <body>
 
 <div class="logo-footer">
-	<img src="resources/logo-pygalicia.png">
+	<a href="index.html#02"><img src="resources/logo-pygalicia.png"></a>
 </div>
 <div class="reveal">
 
 	<div class="slides">
-		<section class="background">
-			<h1>
-				Controlando el mundo f&iacute;sico<br />
-				con <span style="color:#3776AB;">Python</span> y <span style="color:red;">RaspberryPi</span>
-			</h1>
-			<br />
-			<h2>- Taller PyDay Galicia, 10 junio 2017 -</h2>
+		<section>
+			<h1>sin ellos, no hubiera sido posible...</h1>
+			<p style="font-size: 50%;">
+				<a href="http://python-vigo.es">Python-Vigo</a><br />
+				<a href="http://initios.com">Initios</a><br />
+				<a href="">Iván Nieto</a><br>
+				<a href="">Carlos González</a><br>
+				<a href="">Sergio Carracedo</a><br>
+				<a href="">Manuel Guimarey</a><br>
+				<a href="">CFP Daniel Castelao</a><br>
+				<a href="">Álex Hermida</a><br>
+				<a href="">Héctor Fernández</a><br>
+				<a href="http://kaleidocoworking.com">Kaleido Coworking</a><br>
+				<a href="">David Ibañez</a><br>
+				<a href="http://www.marcovigo.com/">Museo Marco</a><br>
+				<a href="">Luis Miranda</a><br>
+				<a href="https://aindustriosa.org">A Industriosa</a>
+			</p>
+			<h1>gracias!</h1>
 		</section>
-
-		<section class="background">
-			<h1>Miguel y Félix</h1>
-			<img class="esquema" src="resources/miguel-felix.jpg" /><br/>
-			<a href="https://twitter.com/mgesteiro" target="_blank">@mgesteiro</a> / <a href="https://twitter.com/felixgomezlopez" target="_blank">@felixgomezlopez</a>
-		</section>
-
-		<section class="background">
-			<h1>Índice</h1>
-			<ul>
-				<li><a href="presentacion.html">Introducción</a></li>
-				<li><a href="P00-inicial.html">Práctica inicial</a></li>
-				<li>Prácticas individuales
-					<ul>
-						<li><a href="P01-fotoresistor.html">Fotoresistencia (LDR)</a></li>
-						<li><a href="P02-sensor-movimiento.html">Detector de movimiento (PIR)</a></li>
-						<li><a href="P03-sensor-distancia.html">Sensor de distancia</a></li>
-						<li><a href="P04-rgb.html">LED RGB</a></li>
-						<li><a href="P05-servo.html">Servo</a></li>
-					</ul>
-				</li>
-				<li><a href="P06-telegram.html">Práctica común: Relé + Bot de Telegram</a></li>
-				<li><a href="cierre.html">Cierre</a></li>
-			</ul>
-		</section>
-
 	</div>
 </div>
 
