--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 		<section class="background">
 			<h1>Índice</h1>
-			<ul>
+			<ul style="font-size: 75%;">
 				<li><a href="presentacion.html">Introducción</a></li>
 				<li><a href="P00-inicial.html">Práctica inicial</a></li>
 				<li>Prácticas individuales
