--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<section class="background">
 			<h1>Índice</h1>
 			<ul style="font-size: 75%;">
-				<li><a href="presentacion.html">Introducción</a></li>
+				<li><a href="https://www.raspberrypi.org">Introducción</a></li>
 				<li><a href="P00-inicial.html">Práctica inicial</a></li>
 				<li>Prácticas individuales
 					<ul>
